improve search scoring & sorting